--- a/assembl/static2/css/_assembl_base_styles.scss
+++ b/assembl/static2/css/_assembl_base_styles.scss
@@ -61,6 +61,7 @@
 @import 'components/cookiesSelector';
 @import 'components/circleAvatar';
 @import 'components/fictionHeader';
+@import 'components/exportSection';
 @import 'views/administration';
 @import 'views/unauthorizedAdministration';
 @import 'views/debate';
