--- a/assembl/static2/css/components/datePicker.scss
+++ b/assembl/static2/css/components/datePicker.scss
@@ -19,7 +19,7 @@
   }
 
   .react-datepicker__input-container {
-    input[type="text"] {
+    input[type='text'] {
       box-shadow: none;
       width: 250px;
       height: 34px;
@@ -52,4 +52,8 @@
       }
     }
   }
+}
+
+button.DayPickerKeyboardShortcuts_buttonReset {
+  display: none;
 }
