--- a/assembl/static2/css/_assembl_base_styles.scss
+++ b/assembl/static2/css/_assembl_base_styles.scss
@@ -53,6 +53,7 @@
 @import 'components/gaugeVoteForProposal';
 @import 'components/cookiesPolicy';
 @import 'components/datePicker';
+@import 'components/dateRangePicker';
 @import 'components/rc-slider';
 @import 'components/cookiesBar';
 @import 'components/cookiesSelector';
